--- a/Copy to SD Card root directory to update/Language Packs/language_ca.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ca.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:Informació d'estat persistent
 label_terminal_ack:Mostra ACK a la terminal
 label_serial_always_on:Serial Always ON
-label_marlin_full_screen:Mode Marlin a pantalla completa
+label_marlin_fullscreen:Mode Marlin a pantalla completa
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Velocitat de moviment(X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Temporitzador inactiu LCD
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Perilla rotativa LED
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_enabled:Enviar Gcode inicial
-label_end_gcode_enabled:Enviar Gcode final
-label_cancel_gcode_enabled:Cancel · lar Gcode
+label_start_gcode_on:Enviar Gcode inicial
+label_end_gcode_on:Enviar Gcode final
+label_cancel_gcode_on:Cancel · lar Gcode
 label_steps_setting:Passos per MM
 label_filament_setting:Filament Diameter
 label_maxacceleration:Max Acceleració
