--- a/Copy to SD Card root directory to update/Language Packs/language_cn.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cn.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:百分比显示风扇速度
 label_persistent_info:顶部温度信息
 label_terminal_ack:在G-code终端中显示温度信息
 label_serial_always_on:串口常开
-label_marlin_full_screen:全屏显示Marlin模式
+label_marlin_fullscreen:全屏显示Marlin模式
 label_marlin_show_title:Marlin模式显示标题
 label_marlin_type:Marlin模式类型
 label_move_speed:移动速度(X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD自动睡眠时间
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:旋钮LED颜色
 label_knob_led_idle:旋钮LED自动睡眠
-label_start_gcode_enabled:执行打印前起始Gcode
-label_end_gcode_enabled:执行打印后结束Gcode
-label_cancel_gcode_enabled:中断打印Gcode
+label_start_gcode_on:执行打印前起始Gcode
+label_end_gcode_on:执行打印后结束Gcode
+label_cancel_gcode_on:中断打印Gcode
 label_steps_setting:电机每毫米脉冲数(Steps/mm)
 label_filament_setting:Filament Diameter
 label_maxacceleration:最大加速度
