--- a/Copy to SD Card root directory to update/Language Packs/language_cz.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cz.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Rychlost ventilátoru v %
 label_persistent_info:Zobrazení stavových ikon
 label_terminal_ack:zobrazit ACK Terminálu
 label_serial_always_on:Sériový port vždy ON
-label_marlin_full_screen:Fullscreen režim Marlin
+label_marlin_fullscreen:Fullscreen režim Marlin
 label_marlin_show_title:Zobrazit tytulek Marlin
 label_marlin_type:Typ Marlin Modu
 label_move_speed:Rychlost pohybu X Y Z
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD snížení jasu po
 label_block_touch_on_idle:Blok. dotek při zatmavení
 label_knob_led_color:Rotační knob LED
 label_knob_led_idle:Rotační knob LED idle
-label_start_gcode_enabled:Spustit Gcode před tiskem
-label_end_gcode_enabled:Spustit Gcode po tisku
-label_cancel_gcode_enabled:Spustit Gcode po stornu
+label_start_gcode_on:Spustit Gcode před tiskem
+label_end_gcode_on:Spustit Gcode po tisku
+label_cancel_gcode_on:Spustit Gcode po stornu
 label_steps_setting:Kroků/mm
 label_filament_setting:Průměr Filamentu
 label_maxacceleration:Max zrychlení
