--- a/Copy to SD Card root directory to update/Language Packs/language_de.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_de.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Lüft. Geschw. in Prozent
 label_persistent_info:Persistente Status Info
 label_terminal_ack:Zeige ACK im Terminal
 label_serial_always_on:Seriell Verbind. immer an
-label_marlin_full_screen:Marlin Vollbild
+label_marlin_fullscreen:Marlin Vollbild
 label_marlin_show_title:Marlin Titel anz.
 label_marlin_type:Marlin Modus Typ
 label_move_speed:Geschwindigkeit (XYZ)
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD-Timeout
 label_block_touch_on_idle:Kein Touch im Standby
 label_knob_led_color:Drehknopf LED Farbe
 label_knob_led_idle:Drehknopf LED idle Farbe
-label_start_gcode_enabled:Gcode vor Druck
-label_end_gcode_enabled:Gcode nach Druck
-label_cancel_gcode_enabled:Gcode bei Abbruch
+label_start_gcode_on:Gcode vor Druck
+label_end_gcode_on:Gcode nach Druck
+label_cancel_gcode_on:Gcode bei Abbruch
 label_steps_setting:Schritte pro mm
 label_filament_setting:Filament Durchmesser
 label_maxacceleration:max. Beschleunigung
