--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Vitesse ventilateur en %
 label_persistent_info:Temp. toujours affichées
 label_terminal_ack:Afficher ACK sur Terminal
 label_serial_always_on:Serial toujours actif
-label_marlin_full_screen:Mode Marlin plein écran
+label_marlin_fullscreen:Mode Marlin plein écran
 label_marlin_show_title:Titre en Mode Marlin
 label_marlin_type:Type du Mode Marlin
 label_move_speed:Vitesse de déplacement (X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Durée avant diminution
 label_block_touch_on_idle:Bloquer touches en veille
 label_knob_led_color:LED du bouton rotatif
 label_knob_led_idle:Veille du bouton rotatif
-label_start_gcode_enabled:Gcode avant l'impression
-label_end_gcode_enabled:Gcode après l'impression
-label_cancel_gcode_enabled:Gcode d'annulation
+label_start_gcode_on:Gcode avant l'impression
+label_end_gcode_on:Gcode après l'impression
+label_cancel_gcode_on:Gcode d'annulation
 label_steps_setting:Steps par mm
 label_filament_setting:Diamètre filament
 label_maxacceleration:Accélérations maximales
