--- a/Copy to SD Card root directory to update/Language Packs/language_gr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_gr.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:Πληροφορίες μόνιμης κατάστασης
 label_terminal_ack:Εμφάνιση ACK στο τερματικό
 label_serial_always_on:Serial Always ON
-label_marlin_full_screen:Λειτουργία Marlin σε πλήρη οθόνη
+label_marlin_fullscreen:Λειτουργία Marlin σε πλήρη οθόνη
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Ταχύτητα κίνησης(X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Xρονομετρητής αδράνειας οθόνης
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:LED περιστροφικού κουμπιού
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_enabled:Αρχικό Gcode προ εκτύπωσης
-label_end_gcode_enabled:Τερματικό Gcode εφότου εκτύπωσης
-label_cancel_gcode_enabled:Ματαίωση Gcode
+label_start_gcode_on:Αρχικό Gcode προ εκτύπωσης
+label_end_gcode_on:Τερματικό Gcode εφότου εκτύπωσης
+label_cancel_gcode_on:Ματαίωση Gcode
 label_steps_setting:Βήματα ανά χιλ
 label_filament_setting:Filament Diameter
 label_maxacceleration:Μέγιστη επιτάχυνση
