--- a/Copy to SD Card root directory to update/Language Packs/language_hu.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_hu.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Ventilátor sebesség %-ban
 label_persistent_info:Állandó állapotinfó
 label_terminal_ack:ACK Megjelenítése
 label_serial_always_on:Soros port folytonos
-label_marlin_full_screen:Nagyképernyős Marlin mód
+label_marlin_fullscreen:Nagyképernyős Marlin mód
 label_marlin_show_title:Marlin mód cím támogatás
 label_marlin_type:Marlin mód típusa
 label_move_speed:Mozgás seb. (X-Y-Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD Halványítási idő
 label_block_touch_on_idle:Érintés tiltás alapjáraton
 label_knob_led_color:Forgatógomb LED
 label_knob_led_idle:Forgatógomb tétlen
-label_start_gcode_enabled:Kezdő G-Kód
-label_end_gcode_enabled:Befejező G-Kód
-label_cancel_gcode_enabled:Leállító G-Kód
+label_start_gcode_on:Kezdő G-Kód
+label_end_gcode_on:Befejező G-Kód
+label_cancel_gcode_on:Leállító G-Kód
 label_steps_setting:Lépés beállítás
 label_filament_setting:Filament átmérő
 label_maxacceleration:Max gyorsulás
