--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Ventola in percentuale
 label_persistent_info:Mostra barra di stato
 label_terminal_ack:Mostra ACK in console
 label_serial_always_on:Seriale sempre accesa
-label_marlin_full_screen:Marlin a schermo intero
+label_marlin_fullscreen:Marlin a schermo intero
 label_marlin_show_title:Mostra titolo in Marlin
 label_marlin_type:Modalità Marlin
 label_move_speed:Vel. movimenti(X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Timer luminosità
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:LED manopola 
 label_knob_led_idle:LED manopola spento
-label_start_gcode_enabled:Inserisci start gcode
-label_end_gcode_enabled:Inserisci end gcode
-label_cancel_gcode_enabled:Script canc. stampa
+label_start_gcode_on:Inserisci start gcode
+label_end_gcode_on:Inserisci end gcode
+label_cancel_gcode_on:Script canc. stampa
 label_steps_setting:Step per mm
 label_filament_setting:Diametro filamento
 label_maxacceleration:Accelerazione massima
