--- a/Copy to SD Card root directory to update/Language Packs/language_ru.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ru.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Скорость вентилятора в проце
 label_persistent_info:Нагрев в инфостроке
 label_terminal_ack:ACK терминала (C°)
 label_serial_always_on:Серийный порт Всегда ВКЛЮЧЕН
-label_marlin_full_screen:Marlin на весь экран
+label_marlin_fullscreen:Marlin на весь экран
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin тип режима
 label_move_speed:Скорость (X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Время до гашения LCD
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Подсветка энкодера
 label_knob_led_idle:Простой подсветки энкодера
-label_start_gcode_enabled:G-код перед печатью
-label_end_gcode_enabled:G-код после печати
-label_cancel_gcode_enabled:G-код отмены печати
+label_start_gcode_on:G-код перед печатью
+label_end_gcode_on:G-код после печати
+label_cancel_gcode_on:G-код отмены печати
 label_steps_setting:Настройка шагов на мм
 label_filament_setting:Диаметр прутка
 label_maxacceleration:MAX ускорение
