--- a/Copy to SD Card root directory to update/Language Packs/language_sk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sk.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:Trvalé info o stave
 label_terminal_ack:Show ACK in Terminal
 label_serial_always_on:Serial Always ON
-label_marlin_full_screen:Marlin mode in fullscreen
+label_marlin_fullscreen:Marlin mode in fullscreen
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Rýchlosť pohybu XYZ
@@ -35,9 +35,9 @@ label_lcd_idle_time:Zníženie jasu LCD po
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:LED otočného tlačidla
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_enabled:Začiatočný Gcode
-label_end_gcode_enabled:Koncový Gcode
-label_cancel_gcode_enabled:Cancel Gcode
+label_start_gcode_on:Začiatočný Gcode
+label_end_gcode_on:Koncový Gcode
+label_cancel_gcode_on:Cancel Gcode
 label_steps_setting:Počet krokov na MM
 label_filament_setting:Filament Diameter
 label_maxacceleration:Maximálna akcelerácia
