--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -297,13 +297,13 @@ marlin_background_color:1
 ## Marlin Mode font color
 marlin_font_color:8
 
-#### Marlin Mode Full Screen Support
+#### Marlin Mode Fullscreen Support
 # Run Marlin Mode in fullscreen.
 #
 # NOTE: Disable is recommended for TFT24.
 #
 #   Options: [disable: 0, enable: 1]
-marlin_full_screen:0
+marlin_fullscreen:0
 
 #### Marlin Mode Title Support
 # Show banner text at the top of the TFT in Marlin Mode.
@@ -508,9 +508,9 @@ level_feedrate:XY6000 Z6000
 #### Inverted Axes (Manual Leveling, Move)
 # Invert axis button function in Manual Leveling and Move menus in order it matches the actual axis movement.
 #
-# NOTE: The Y-axis of different printer (move hotbed or move nozzle) move in different directions.
-#       So Y-axis leveling invertion can't follow up inverted_y-axiaxis[Y_AXIS].
-#       We separate a single variable "LY"(Leveling Y-axis) to deal with the Y-axis leveling movement direction.
+# NOTE: The Y axis of different printer (move hotbed or move nozzle) move in different directions.
+#       So Y axis leveling invertion can't follow up inverted_axis[Y_AXIS].
+#       We separate a single variable "LY"(Leveling Y axis) to deal with the Y axis leveling movement direction.
 #
 #   Format: [X<option> Y<option> Z<option> LY<option>]
 #   Options: [disable: 0, enable: 1]
@@ -521,15 +521,15 @@ inverted_axis:X0 Y0 Z0 LY0
 # If enabled, after homing a probing in the center of the bed is performed and then the nozzle
 # is moved to the XY probing point.
 # If disabled, after homing the nozzle is moved directly to the XY honing point. This is usefull
-# in case Marlin firmware is configured to use the probe for Z-axis homing (e.g.
+# in case Marlin firmware is configured to use the probe for Z axis homing (e.g.
 # USE_PROBE_FOR_Z_HOMING enabled in Marlin firmware) to avoid a second probing after homing.
 #
 # NOTES:
-#   - Enable it in case Marlin firmware is not configured to use the probe for Z-axis homing
+#   - Enable it in case Marlin firmware is not configured to use the probe for Z axis homing
 #     (e.g. USE_PROBE_FOR_Z_HOMING disabled in Marlin firmware) or the XY probing point set
 #     for homing is not reacheable by the nozzle (e.g. due to HW limitations/constraints or
 #     printer specific configuration).
-#   - Disable it (preferably) in case Marlin firmware is configured to use the probe for Z-axis
+#   - Disable it (preferably) in case Marlin firmware is configured to use the probe for Z axis
 #     homing (e.g. USE_PROBE_FOR_Z_HOMING enabled in Marlin firmware).
 #
 #   Options: [disable: 0, enable: 1]
@@ -804,15 +804,15 @@ custom_gcode_7:M502\n
 
 #### Default Start Gcode Status
 #   Options: [disable: 0, enable: 1]
-start_gcode_enabled:0
+start_gcode_on:0
 
 #### Default End Gcode Status
 #   Options: [disable: 0, enable: 1]
-end_gcode_enabled:0
+end_gcode_on:0
 
 #### Default Cancel Gcode Status
 #   Options: [disable: 0, enable: 1]
-cancel_gcode_enabled:0
+cancel_gcode_on:0
 
 #### Start Gcode
 # This gcode will runs before starting a print if `start_gcode_enabled` is enabled.
