--- a/Copy to SD Card root directory to update/Language Packs/language_en.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_en.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Fan Speed in Percent
 label_persistent_info:Persistent Status Info
 label_terminal_ack:Show ACK in Terminal
 label_serial_always_on:Serial Always ON
-label_marlin_full_screen:Fullscreen Mode
+label_marlin_fullscreen:Fullscreen Mode
 label_marlin_show_title:Show Title
 label_marlin_type:Marlin Mode Type
 label_move_speed:Move speed(X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Idle timeout
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Rotary Knob LED
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_enabled:Start Gcode before print
-label_end_gcode_enabled:End Gcode after print
-label_cancel_gcode_enabled:Cancel Gcode
+label_start_gcode_on:Start Gcode before print
+label_end_gcode_on:End Gcode after print
+label_cancel_gcode_on:Cancel Gcode
 label_steps_setting:Steps per mm
 label_filament_setting:Filament Diameter
 label_maxacceleration:Max Acceleration
