--- a/Copy to SD Card root directory to update/Language Packs/language_jp.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_jp.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:永続的なステータス情報
 label_terminal_ack:端末でACKを表示する
 label_serial_always_on:Serial Always ON
-label_marlin_full_screen:フルスクリーンでマーリンモード
+label_marlin_fullscreen:フルスクリーンでマーリンモード
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:移動速度(X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD調光アイドルタイマー
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:回転ノブLED
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_enabled:印刷前にGコードを開始する
-label_end_gcode_enabled:印刷後にGコードを終了する
-label_cancel_gcode_enabled:Gコードをキャンセルする
+label_start_gcode_on:印刷前にGコードを開始する
+label_end_gcode_on:印刷後にGコードを終了する
+label_cancel_gcode_on:Gコードをキャンセルする
 label_steps_setting:MMあたりのステップ
 label_filament_setting:Filament Diameter
 label_maxacceleration:最大加速度
