--- a/Copy to SD Card root directory to update/Language Packs/language_nl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_nl.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:Aanhoudende statusinfo
 label_terminal_ack:Laat ACK in Terminal zien
 label_serial_always_on:Serial Always ON
-label_marlin_full_screen:Marlin mode in fullscreen
+label_marlin_fullscreen:Marlin mode in fullscreen
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Bewegingssnelheid(X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Idle timeout
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Draaiknop LED
 label_knob_led_idle:Draaiknop LED inactief
-label_start_gcode_enabled:Start Gcode before print
-label_end_gcode_enabled:End Gcode after print
-label_cancel_gcode_enabled:Cancel Gcode
+label_start_gcode_on:Start Gcode before print
+label_end_gcode_on:End Gcode after print
+label_cancel_gcode_on:Cancel Gcode
 label_steps_setting:Stappen permm
 label_filament_setting:Filament Diameter
 label_maxacceleration:Max Acceleratie
