--- a/Copy to SD Card root directory to update/Language Packs/language_sl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sl.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:Stalno prikazuj status
 label_terminal_ack:Pokaži ACK v terminalu
 label_serial_always_on:Serial Always ON
-label_marlin_full_screen:Marlin čez cel zaslon
+label_marlin_fullscreen:Marlin čez cel zaslon
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Hitr. pomika (X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Zatemnitev po času
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:LED enkoder gumba
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_enabled:Zaženi startno G-kodo
-label_end_gcode_enabled:Zaženi končno G-kodo
-label_cancel_gcode_enabled:Zaženi G-kodo preklica
+label_start_gcode_on:Zaženi startno G-kodo
+label_end_gcode_on:Zaženi končno G-kodo
+label_cancel_gcode_on:Zaženi G-kodo preklica
 label_steps_setting:Št. korakov na MM
 label_filament_setting:Filament Diameter
 label_maxacceleration:Max pospešek
