--- a/Copy to SD Card root directory to update/Language Packs/language_tc.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tc.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:頂部溫度訊息
 label_terminal_ack:在G-code終端顯示溫度
 label_serial_always_on:Serial Always ON
-label_marlin_full_screen:全螢幕Marlin模式
+label_marlin_fullscreen:全螢幕Marlin模式
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:移動速度(X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:螢幕進入睡眠時間
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:旋鈕LED顏色
 label_knob_led_idle:旋鈕LED自動睡眠
-label_start_gcode_enabled:執行起始G-code
-label_end_gcode_enabled:執行結尾G-code
-label_cancel_gcode_enabled:中斷執行G-code
+label_start_gcode_on:執行起始G-code
+label_end_gcode_on:執行結尾G-code
+label_cancel_gcode_on:中斷執行G-code
 label_steps_setting:電機每毫米步數Steps/mm
 label_filament_setting:Filament Diameter
 label_maxacceleration:最大加速度
