--- a/Copy to SD Card root directory to update/Language Packs/language_tr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tr.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Yüzdesel Fan Hızı
 label_persistent_info:Kalıcı Durum Mesajı
 label_terminal_ack:Terminalde onay mesajları
 label_serial_always_on:Seri Bağ. Sürekli Açık
-label_marlin_full_screen:Tam Ekran Marlin Modu
+label_marlin_fullscreen:Tam Ekran Marlin Modu
 label_marlin_show_title:Marlin Modu Başlık Desteği
 label_marlin_type:Marlin Mode Type
 label_move_speed:Hareket Hızı(X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Parlaklık Kısılma Süresi
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Döner Düğme LED
 label_knob_led_idle:Düğme LED bekleme
-label_start_gcode_enabled:Başlangıç gcodeu kullan
-label_end_gcode_enabled:Bitiş gcodeu kullan
-label_cancel_gcode_enabled:İptal gcodeu kullan
+label_start_gcode_on:Başlangıç gcodeu kullan
+label_end_gcode_on:Bitiş gcodeu kullan
+label_cancel_gcode_on:İptal gcodeu kullan
 label_steps_setting:mm/adım
 label_filament_setting:Filament Diameter
 label_maxacceleration:Maks. İvmelenme
