--- a/Copy to SD Card root directory to update/Language Packs/language_uk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_uk.ini
@@ -13,7 +13,7 @@ label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:Нагрівання в інфостроці
 label_terminal_ack:ACK терміналу (°С)
 label_serial_always_on:Serial Always ON
-label_marlin_full_screen:Marlin на весь екран
+label_marlin_fullscreen:Marlin на весь екран
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Швидкість (X Y Z)
@@ -35,9 +35,9 @@ label_lcd_idle_time:Час до загасання LCD
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Підсвічування енкодера
 label_knob_led_idle:Простій підсвічування енкодера
-label_start_gcode_enabled:Розпочати G-код перед друком
-label_end_gcode_enabled:Завершити G-код після друку
-label_cancel_gcode_enabled:G-код скасувати друк
+label_start_gcode_on:Розпочати G-код перед друком
+label_end_gcode_on:Завершити G-код після друку
+label_cancel_gcode_on:G-код скасувати друк
 label_steps_setting:Налаштування кроків на мм
 label_filament_setting:Filament Diameter
 label_maxacceleration:MAX прискорення
