--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -154,8 +154,8 @@ font_color:0
 ## Reminder font color, such as: "No print attached", "Busy processing", etc
 reminder_color:2
 
-## Volume status/reminder font color, such as: "Card inserted", "Card removed"
-volume_status_color:5
+## status reminder (e.g. SD status) font color, such as: "Card inserted", "Card removed"
+status_reminder_color:5
 
 ## Backgroud color for X Y Z position display in Status Screen menu
 status_xyz_bg_color:15
@@ -417,7 +417,7 @@ auto_load_leveling:1
 # On Marlin firmware, the TFT will auto-detect Onboard SD Card.
 # Auto-detect is not available for other firmwares like Smoothieware.
 #   Options: [disable: 0, enable: 1, auto-detect: 2]
-onboard_sd_support:2
+onboard_sd:2
 
 #### M27 Printing Status Refresh Time
 # M27 printing status refresh time (this will be used if SD_AUTOREPORT is not detected by the TFT).
@@ -434,7 +434,7 @@ M27_always_active:1
 # On Marlin firmware, the TFT will auto-detect Long File Name support.
 # Auto-detect is not available for other firmwares like Smoothieware.
 #   Options: [disable: 0, enable: 1, auto-detect: 2]
-long_filename_support:2
+long_filename:2
 
 #### Pause/Nozzle Park Settings
 # These settings are used when a print is paused or in any feature which requires moving/parking the nozzle
@@ -499,8 +499,8 @@ level_z_raise:10
 #   Value range: [min: 10, max: 12000]
 level_feedrate:XY6000 Z6000
 
-#### Inverted Axes (Manual Leveling, Move)
-# Invert axis button function in Manual Leveling and Move menus in order it matches the actual axis movement.
+#### Inverted Axes (Manual Leveling, Move, Probe Offset)
+# Used by Manual Leveling, Move and Probe Offset menus in order axis matches the actual axis movement.
 #
 # NOTE: The Y axis of different printer (move hotbed or move nozzle) move in different directions.
 #       So Y axis leveling invertion can't follow up inverted_axis[Y_AXIS].
@@ -586,15 +586,15 @@ preheat_temp6:T250 B90
 # Power Supply Settings (only if connected to TFT controller)
 #--------------------------------------------------------------------
 
-#### Default Power Supply Mode
-# Enable auto shutdown when hotend temperature drops below target value.
+#### Power Supply Auto Shutdown Support
+# Enable power supply auto shutdown after a print is finished when hotend temperature drops below target value.
 #   Options: [disable: 0, enable: 1, auto-detect: 2]
 ps_on:0
 
-#### Power Supply Active HIGH
-# Enable the logic of the mode on HIGH signal.
+#### Active HIGH Power Supply Auto Shutdown Logic
+# The power supply uses an HIGH signal logic.
 #   Options: [disable: 0, enable: 1]
-ps_active_high:1
+ps_on_active_high:1
 
 #### Power Supply Auto Shutdown Temperature
 # Maximum hotend temperature for automatic shutdown after printing, if automatic shutdown is enabled.
@@ -603,7 +603,7 @@ ps_active_high:1
 # will wait for the hotend temperature to drop below this value before shutting down automatically.
 #   Unit: [temperature in °C]
 #   Value range: [min: 20, max: 1000]
-ps_auto_shutdown_temp:50
+ps_on_temp:50
 
 
 #--------------------------------------------------------------------
@@ -615,19 +615,19 @@ ps_auto_shutdown_temp:50
 #   2) Configure the sensor in the firmware of your mainboard.
 #   3) Add M75 to "start_gcode" and M77 to "end_gcode" of the TFT (or your slicer).
 
-#### Default Filament Runout Sensor
+#### Filament Runout Sensor Support
 # Select the type of filament runout sensor and its default enabled/disabled state.
 #
 #   Options: [Normal Disabled: 0, Normal Enabled: 1, Smart Disabled: 2, Smart Enabled: 3]
 fil_runout:0
 
 #### Inverted Filament Runout Sensor Logic
-# Invert the logic of the sensor.
+# The sensor uses an inverted logic.
 #   Options: [disable: 0, enable: 1]
 fil_runout_inverted:1
 
-#### Filament Runout Sensor NC (Normal Close)
-# Invert the logic of the sensor.
+#### NC (Normal Close) Filament Runout Sensor
+# The sensor is of type NC.
 #   Options: [Normal Open: 0, Normal Close: 1]
 fil_runout_nc:1
 
@@ -638,7 +638,8 @@ fil_runout_nc:1
 fil_runout_noise_threshold:100
 
 #### Smart Filament Runout Detection
-# For use with an encoder disc that toggles runout pin as filament moves.
+# Used in conjuction with an SFS (Smart Filamanent Sensor) based on an encoder disc that
+# toggles runout pin as filament moves.
 #   Unit: [distance in mm]
 #   Value range: [min: 1, max: 50]
 fil_runout_distance:7
@@ -648,22 +649,22 @@ fil_runout_distance:7
 # Power Loss Recovery & BTT UPS Settings
 #--------------------------------------------------------------------
 
-#### Default Power Loss Recovery Mode
+#### Power Loss Recovery Support
 # Enable power loss recovery.
 # Disable to reduce the loss of SD card or U disk.
 #   Options: [disable: 0, enable: 1]
-plr_on:1
+pl_recovery:1
 
 #### Power Loss Recovery Homing
 # Home before power loss recovery.
 #   Options: [disable: 0, enable: 1]
-plr_home:0
+pl_recovery_home:0
 
 #### Power Loss Recovery Z Raise
 # Raise Z axis on resume (on power loss with UPS).
 #   Unit: [distance in mm]
 #   Value range: [min: 0, max: 2000]
-plr_z_raise:10
+pl_recovery_z_raise:10
 
 #### BTT Mini UPS Support
 # Enable backup power/UPS to move Z axis on power loss.
