--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -154,8 +154,8 @@ font_color:0
 ## Reminder font color, such as: "No print attached", "Busy processing", etc
 reminder_color:2
 
-## status reminder (e.g. SD status) font color, such as: "Card inserted", "Card removed"
-status_reminder_color:5
+## Status (e.g. volume reminder) font color, such as: "Card inserted", "Card removed"
+status_color:5
 
 ## Backgroud color for X Y Z position display in Status Screen menu
 status_xyz_bg_color:15
@@ -479,20 +479,20 @@ pause_feedrate:XY6000 Z6000 E600
 #   Value range: [min: 0, max: 2000]
 level_edge_distance:20
 
-## Leveling Z Position (Manual, Mesh Leveling, Probe/Home Offset, Mesh Tuner)
-# For manual leveling and MBL, lower Z axis to this absolute position after reaching a leveling point.
+## Leveling Z Position (Manual Leveling, Mesh Leveling, Probe/Home Offset, Mesh Tuner)
+# For Manual Leveling and MBL, lower Z axis to this absolute position after reaching a leveling point.
 # For Probe/Home Offset and ABL in Mesh Tuner, raise Z axis by this relative position after reaching a leveling point.
 #   Unit: [position in mm]
 #   Value range: [min: 0, max: 2000]
 level_z_pos:0.2
 
-## Leveling Z Raise (Manual, Mesh Leveling)
+## Leveling Z Raise (Manual Leveling, Mesh Leveling)
 # Raise Z axis by this relative value before moving to another point during leveling/probing procedures.
 #   Unit: [distance in mm]
 #   Value range: [min: 0, max: 2000]
 level_z_raise:10
 
-## Leveling Feed Rate (Manual, Mesh Leveling)
+## Leveling Feed Rate (Manual Leveling, Mesh Leveling)
 # Feedrate to use when moving an axis during leveling/probing procedures.
 #   Format: [level_feedrate: XY<feedrate> Z<feedrate>]
 #   Unit: [feedrate in mm/min]
@@ -557,29 +557,29 @@ z_steppers_alignment:0
 touchmi_sensor:0
 
 #### Preheat Temperatures
-#   Format: [preheat_nameX:<name>]
-#           [preheat_tempX:T<hotend temp> B<bed temp>]
+#   Format: [preheat_name_X:<name>]
+#           [preheat_temp_X:T<hotend temp> B<bed temp>]
 #   Unit: [temperature in °C]
 #   Value range: name:        [min: 3, max: 20 characters]
 #                hotend temp: [min: 20, max: 1000]
 #                bed temp:    [min: 20, max: 400]
-preheat_name1:PLA
-preheat_temp1:T200 B60
+preheat_name_1:PLA
+preheat_temp_1:T200 B60
 
-preheat_name2:PETG
-preheat_temp2:T240 B70
+preheat_name_2:PETG
+preheat_temp_2:T240 B70
 
-preheat_name3:ABS
-preheat_temp3:T230 B90
+preheat_name_3:ABS
+preheat_temp_3:T230 B90
 
-preheat_name4:WOOD
-preheat_temp4:T170 B50
+preheat_name_4:WOOD
+preheat_temp_4:T170 B50
 
-preheat_name5:TPU
-preheat_temp5:T220 B50
+preheat_name_5:TPU
+preheat_temp_5:T220 B50
 
-preheat_name6:NYLON
-preheat_temp6:T250 B90
+preheat_name_6:NYLON
+preheat_temp_6:T250 B90
 
 
 #--------------------------------------------------------------------
@@ -589,12 +589,13 @@ preheat_temp6:T250 B90
 #### Power Supply Auto Shutdown Support
 # Enable power supply auto shutdown after a print is finished when hotend temperature drops below target value.
 #   Options: [disable: 0, enable: 1, auto-detect: 2]
-ps_on:0
+ps_auto_shutdown:0
 
-#### Active HIGH Power Supply Auto Shutdown Logic
-# The power supply uses an HIGH signal logic.
+#### Active HIGH Power Supply Logic
+# The power supply uses this HIGH signal logic to stay ON.
+# The power supply uses the opposite of this logic to stay OFF.
 #   Options: [disable: 0, enable: 1]
-ps_on_active_high:1
+ps_active_high:1
 
 #### Power Supply Auto Shutdown Temperature
 # Maximum hotend temperature for automatic shutdown after printing, if automatic shutdown is enabled.
@@ -603,7 +604,7 @@ ps_on_active_high:1
 # will wait for the hotend temperature to drop below this value before shutting down automatically.
 #   Unit: [temperature in °C]
 #   Value range: [min: 20, max: 1000]
-ps_on_temp:50
+ps_auto_shutdown_temperature:50
 
 
 #--------------------------------------------------------------------
@@ -797,17 +798,17 @@ custom_gcode_7:M502\n
 #      - start_gcode: M75\n
 #      - end_gcode: M77\n
 
-#### Default Start Gcode Status
+#### Default Start Gcode State
 #   Options: [disable: 0, enable: 1]
-start_gcode_on:0
+start_gcode_state:0
 
-#### Default End Gcode Status
+#### Default End Gcode State
 #   Options: [disable: 0, enable: 1]
-end_gcode_on:0
+end_gcode_state:0
 
-#### Default Cancel Gcode Status
+#### Default Cancel Gcode State
 #   Options: [disable: 0, enable: 1]
-cancel_gcode_on:0
+cancel_gcode_state:0
 
 #### Start Gcode
 # This gcode will runs before starting a print if `start_gcode_enabled` is enabled.
